<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_Activity">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="370dp"
        android:layout_height="157dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="2">


            <TextView
                android:id="@+id/textView"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="0" />


            <TextView
                android:id="@+id/textView_Nombre"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                app:layout_column="1"

                app:layout_gravity="fill_horizontal"
                app:layout_row="0" />

            <TextView
                android:id="@+id/textView_Apellido"
                android:layout_width="10dp"

                android:layout_height="wrap_content"
                android:text="@string/apellido"
                app:layout_column="2"
                app:layout_gravity="fill_horizontal"
                app:layout_row="0" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipoUsuario"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="1" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Correo: "
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/textView_TipoUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tipo Usario"
                app:layout_column="1"
                app:layout_row="1" />

            <TextView
                android:id="@+id/textView_Correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Correo"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                android:id="@+id/textView_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_regresados"
                app:layout_column="0"
                app:layout_row="3" />

            <TextView
                android:id="@+id/textView_Datos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_regresados"
                app:layout_column="1"
                app:layout_row="3" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="512dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button_Pedir"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:drawableLeft="@mipmap/ic_order_foreground"
            android:text="@string/pedir" />


        <Button
            android:id="@+id/button_Admin"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:drawableLeft="@mipmap/ic_admin_foreground"
            android:text="@string/administar"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>