<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistarActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="620dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:paddingBottom="20dp"
                    android:text="Registro"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editText_Cedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:autofillHints=""

                    android:background="@drawable/input_text"
                    android:hint="@string/cedula"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColorHint="#616161" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />
                <EditText
                    android:id="@+id/editText_IngresarNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:autofillHints=""

                    android:background="@drawable/input_text"
                    android:hint="@string/nombre"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColorHint="#616161" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />
                <EditText
                    android:id="@+id/editText_IngresarApe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:autofillHints=""

                    android:background="@drawable/input_text"
                    android:hint="@string/apellido"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColorHint="#616161" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <EditText
                    android:id="@+id/editText_EmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:autofillHints=""

                    android:background="@drawable/input_text"
                    android:hint="@string/correo"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColorHint="#616161" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <EditText
                    android:id="@+id/editTexT_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="15dp"
                    android:autofillHints=""
                    android:background="@drawable/input_text"
                    android:ems="10"
                    android:hint="@string/password"
                    android:maxLength="10"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColorHint="#616161" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/button_login"
                        android:text="@string/registrar" />

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/si_tengo_cuenta" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>