<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Administar">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewCantidad"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/cantidad_de_pedidos"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewCantidadPedidos"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="@string/_0"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/buttonTodos"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/ver_todos" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/textViewUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Clientes"
                    android:textColorHint="#546E7A" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinnerUsuarios"
                        android:layout_width="265dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/nombre"
                        android:minHeight="48dp"
                        android:prompt="@string/app_name"
                        android:spinnerMode="dialog"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <Button
                        android:id="@+id/button_infoClient"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_info"
                        android:text="@string/info" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/textViewMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Productos"
                    android:textColorHint="#546E7A" />

                <Spinner
                    android:id="@+id/spinnerPrpductos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/nombre"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"


                        android:layout_gravity="center_horizontal"
                        android:fillViewport="true"
                        android:scrollbars="none">

                        <ListView
                            android:id="@+id/listView_Datos"
                            android:layout_width="match_parent"
                            android:layout_height="200dp">

                        </ListView>

                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="176dp"
                android:layout_marginTop="326dp"
                android:layout_marginEnd="177dp"
                android:layout_marginBottom="386dp"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>