<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente.RealizarPedido_Activity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="571dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewUsuario"
                        android:layout_width="103dp"
                        android:layout_height="match_parent"
                        android:hint="@string/cliente"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_nombreR"
                        android:layout_width="103dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/nombre" />

                    <TextView
                        android:id="@+id/textView_ApellidoR"
                        android:layout_width="103dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/apellido" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="21dp" />

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"


                    android:layout_gravity="center_horizontal"
                    android:fillViewport="true"
                    android:scrollbars="none">

                    <ListView
                        android:id="@+id/listView_Datos"
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                    </ListView>

                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="370dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>